--- a/finalproject.css
+++ b/finalproject.css
@@ -3,16 +3,15 @@ body{
     background:#F0F0F3;
 }
 .button{
-    width:100px;
+    width:70px;
+    height : 40px;
     background-color: #e7daf5;
     border: none;
-    color:rgb(8, 8, 8);
-    padding: 15px 0;
+    color:#080808;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    margin: 4px;
     cursor: pointer;
 
 }
@@ -26,4 +25,21 @@ body{
     width: 400px;
     height: 200px;
 }
+
+div {
+    width: 100%;
+    height: 200px;
+}
+div.left {
+    width: 30%;
+    float: left;
+    box-sizing: border-box;
+    
+}
+div.right {
+    width: 70%;
+    float: right;
+    box-sizing: border-box;
+}
+
 
